fix: added gap between pills

--- a/src/assets/components/card.scss
+++ b/src/assets/components/card.scss
@@ -30,8 +30,12 @@
   & > ul {
     list-style: none;
     padding: 0;
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
+    gap: $spacing-sm;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;;
+    
   }
   & > a {
     text-align: end;
